# ROS2_PX4_Offboard_Example

./: .gitignore  .gitmodules  README.md
doc/: tutorial.md
px4_offboard/: LICENSE  setup.py
px4_offboard/launch/: offboard_velocity_control.launch.py
px4_offboard/px4_offboard/: control.py  foxglove.py  joystick.py  processes.py  rover_control.py  velocity_control.py
px4_offboard/px4_offboard/topic_mapping/: dds_topics.yaml  foxglove.py  topic_mapping.md
src/px4-offboard/: setup.py
src/px4-offboard/launch/: offboard_velocity_control.launch.py
src/px4-offboard/px4_offboard/: processes.py  velocity_control.py
src/px4_msgs/: .gitignore  CMakeLists.txt
src/px4_msgs/.github/workflows/: build.yml
src/px4_offboard/: package.xml  setup.py
src/px4_offboard/px4_offboard/: control.py  processes.py  velocity_control.py
src/simulation_test/: CMakeLists.txt  package.xml
src/simulation_test/scripts/: control.py  key_teleop.py
src/simulation_test/src/: RC_offboard_control.cpp
